--- a/404.html
+++ b/404.html
@@ -1,7 +1,1 @@
-<p>申し訳ございませんが。現在一部のサイトは閉鎖中です。</p>
-<p>dns設定の影響により閉鎖されています。</p>
-<p>復活の見込みがありません。</p>
-<p>他のサイトは正常に機能していますのでご了承ください。</p>
-<p>下にある入力欄にURLを入力するとそこに移動します。</p>
-<input type="text" id="tokenid" name="tokenid" required minlength="5" maxlength="900" size="20" />
-<button onclick="location.href=tokenid.value">出発。</button>
+<img src="https://whnneeww.github.io/404.png" alt="404 error">
